<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">3D Video</string>
    <string name="local">Local</string>
    <string name="online">Online</string>
    <string name="yunlifang">Ulifang</string>
    <string name="all">All Video</string>
    <string name="history">History</string>
    <string name="folder">Folder</string>
    <string name="today">"Today"</string>
    <string name="yesterday">"Yesterday"</string>
    <string name="the_day_before_yesterday">"Earlier"</string>
    <string name="history_time">"Have been watching %1$s"</string>
    <string name="duration_h_0">"%1$02dminute%2$02dsecond"</string>
    <string name="duration_hn_0">"%1$dhour%2$02dminute%3$02dsecond"</string>

    <!-- 设置 -->
    <string name="play_continue">"%1$scontinuous playback"</string>
    <string name="play_remember">"%1$smemory player"</string>
    <string name="subtitle">"%1$scaptions show"</string>
    <string name="clear_history">"records clear show"</string>
    <string name="refresh">"Refresh List"</string>
    <string name="close">"Close "</string>
    <string name="open">"Open "</string>
    <string name="no_video">"No video"</string>
    <string name="more_video">"More video"</string>
    <string name="chose_type">"Set up video type"</string>
    <string name="type_2d">"2D video"</string>
    <string name="type_3d_lr">"3D LR video"</string>
    <string name="type_3d_ud">"3D UD video"</string>
    <string name="mode_2d">"2D"</string>
    <string name="mode_3d">"3D"</string>
    <string name="mode_lr">"LR"</string>
    <string name="mode_vr">"VR"</string>
    <string name="convergence_none">"no convergence"</string>
    <string name="convergence_half_width">"half-width"</string>
    
    <string name="no_connectivity">Network problems.</string>
    <string name="please_enter_complete_information">Please enter complete information</string>
    <string name="login_success">Login success</string>
    
    <string name="login">Login</string>
    <string name="ulifang_login">Ulifang login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget password</string>
    <string name="account">Account</string>
    <string name="enter_username">Please enter account</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_url">Please enter url</string>
    <string name="bad_url">bad url</string>
    <string name="url_tips">(Link address format, such as http://****.mkv)</string>
    <string name="play_url">Play URL</string>
    <string name="play">Play</string>

    <!-- 详细信息 -->
    <string name="media_detail">"Details"</string>
    <string name="detail_title">"Title : %1$s"</string>
    <string name="detail_date_taken">"Time : %1$s"</string>
    <string name="detail_path">"Path : %1$s"</string>
    <string name="detail_filesize">"File Size : %1$s"</string>
    <string name="detail_duration">"Duration : %1$s"</string>
    <string name="detail_is3d">"Whether3D： %1$s"</string>
    <string name="yes">"Yes"</string>
    <string name="not">"No"</string>
    <string name="detail_file_count">"%1$svideos"</string>
    <string name="only_one_media">"The current list and only a video"</string>
    <string name="lookfor_more_resource">"To Ulifang see more resources!"</string>
    <string name="clear_success">"Clear success！"</string>
    <string name="refreshing">"Is the background refresh, please wait..."</string>
								
    <!-- 继续播放对话框 -->
    <string name="resume_playing_title" msgid="8996677350649355013">"Continue to play video"</string>
    <string name="resume_playing_message" msgid="5184414518126703481">"From%s Start to play？"</string>
    <string name="resume_playing_resume" msgid="3847915469173852416">"Continue to play"</string>
    <string name="resume_playing_restart" msgid="5471008499835769292">"Restart"</string>
    <string name="prompt">"Prompt"</string>
    <string name="delete" msgid="2839695998251824487">"delete"</string>
    <string name="delete_file">"Delete the file: %1$s？"</string>
    <string name="delete_folder">"Delete the folder: %1$s？"</string>
    <string name="delete_fail">"Unable to complete the operation, no authority operation 4.4 and above system external SD card"</string>
    <string name="loading" msgid="7038208555304563571">"Loading..."</string>
    <string name="fail_to_load" msgid="8394392853646664505">"Unable to load"</string>
    <string name="need_camera_permission">Dear user, this application needs to open the front camera and establish a data connection.\n\t\t\t 1、open the front camera for holographic display. During the openning procedure, the camera will only make the human eye tracking, rather than taking photos.\n\t\t\t2、Establishing data connection will consume information flow, which will produce extra fee charged by the network operator and you could consult the relevant operators for more details .</string>
    <string name="do_not_show">Don\'t prompt again</string>
    <string name="screen_capture_success">"Save the success of the screenshot，path: %1$s"</string>
    <string name="is_locked">The screen is locked and unlocked to unlock the icon</string>

    <!-- 更新 -->
    <string name="update_title">Update Notes</string>
    <string name="update_content">Find new version.Do you want to update it?</string>
    <string name="downLoad_notification_title">Download</string>
    <string name="downLoad_notification_ticker">Download new version</string>
    <string name="downLoad_notification_content1">Download new version...,wait a moment please</string>
    <string name="downLoad_notification_content2">Download over,click to install please!</string>
    <string name="downLoad_notification_content3">Download failed, please check the network connection</string>
</resources>