<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/main_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back_up"
            android:gravity="center_vertical"
            android:text="@string/account"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/register_button_background"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/ulifang_login"
        android:textColor="#FFFFFF"
        android:textSize="19sp" />

    <com.estar.video.ui.ClearEditText
        android:id="@+id/et_account"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/loggin_edit_background"
        android:hint="@string/enter_username"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#d6d8d8"
        android:textCursorDrawable="@null"
        android:textSize="15sp" >
    </com.estar.video.ui.ClearEditText>

    <com.estar.video.ui.ClearEditText
        android:id="@+id/et_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:background="@drawable/loggin_edit_background"
        android:hint="@string/enter_password"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:password="true"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#d6d8d8"
        android:textCursorDrawable="@null"
        android:textSize="15sp" >
    </com.estar.video.ui.ClearEditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_gravity="center_horizontal" 
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_marginTop="14dp"
        android:id="@+id/tv_forget_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_background"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/main_color"
        android:textSize="16sp" />

</LinearLayout>