<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >

    <com.estar.video.ui.ClearEditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/clear_text"
        android:hint="@string/enter_url"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="15sp"
        android:background="@drawable/url_edittext_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textColorHint="#d6d8d8"
        android:paddingLeft="5dp" >
    </com.estar.video.ui.ClearEditText>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
	    android:textColor="#d6d8d8"
	    android:layout_marginTop="5dp"
	    android:textSize="14sp"
	    android:text="@string/url_tips"/>
    <Button
        android:id="@+id/btn_play"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/play_url_button_background"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/play" 
        android:layout_marginTop="20dp"/>

</LinearLayout>